docs(zgc): Spring Boot IS at parity — the plan's last exit criterion is met, and the answer was in the tree
I reported Spring Boot parity as the one thing the whole plan still owed, four
times, and asked whether to spend hours re-running the suite. The answer was
already in a sibling worktree's runner folder.

On 2026-08-10, after the two ZGC-only defects were fixed, the 26 classes that
were the ENTIRE ZGC-vs-default delta were re-run on one binary, -XX:+UseZGC vs
the default, -Xmx 2g, 300s/class:

    ZGC      16 PASS /  7 HANG / 3 FAIL
    default  14 PASS / 10 HANG / 2 FAIL

The record's own verdict is "No functional ZGC-vs-default difference is left",
with three of the five boundary-movement rows in ZGC's favour and the one going
the other way passing on both arms when run alone. Raw arms in
CratonVM-zgcres-20260809/apps/spring-boot-suite-runner/.suite/results/zgcres-final-{zgc,default}-20260810/.

This is parity and not a sample: those 26 classes are by construction the
complete set on which the two arms differed in the 1975-class suite, and the
other ~1,949 already agreed.

The 1860-vs-1902 figure I kept quoting is the 08-08 PRE-FIX run. Phase 1 was
written to catch exactly this — it opens by showing gc-tuning.md quoting a
Tomcat margin its own source superseded the next day — and I then made the
identical mistake about Spring Boot and carried it for four rounds. Searching
for a NEW measurement is not the same as asking whether the old one still
stands. gc-tuning.md and GC.md now carry the superseding figures; the Phase 1
page carries the correction next to the section it corrects, not instead of it.

Phase 4's exit criterion is therefore met in all four components, and with it
the plan's. What remains is not plan work: the collector is still not
concurrent, generational or compacting BY DEFAULT, and turning any switch on is
a fresh throughput decision with its own measurement.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>